--- a/index.html
+++ b/index.html
@@ -46,21 +46,21 @@
                     <img src="images/swa.jpg" alt="Swargam Cafe Project">
                     <h3>Swargam Cafe</h3>
                     <p>A "from-scratch" website for a fictional local cafe and student store, built with HTML, CSS, and interactive JavaScript.</p>
-                    <a href="https://27652ad4-4251-40f0-80a5-8c8f24357351-00-2b22okbmhad1c.pike.replit.dev/" class="project-button" target="_blank">View Live Project</a>
+                     <a href="https://swargamcmd.netlify.app" class="project-button" target="_blank">View Live Project</a>               
                 </div>
 
                 <div class="project-card">
                     <img src="images/wed.jpg" alt="Crystal Visuals Redesign Project">
                     <h3>Crystal Visuals Redesign</h3>
                     <p>A "Before & After" redesign concept for a real wedding photography business, focusing on a clean, elegant, and professional UI.</p>
-                    <a href="https://ad859ef3-4757-4009-81ea-11728265ac1a-00-2o33emfa3mmds.pike.replit.dev/" class="project-button" target="_blank">View Live Project</a>
+                    <a href="https://crystalmedia.netlify.app" class="project-button" target="_blank">View Live Project</a>                
                 </div>
 
                 <div class="project-card">
                     <img src="images/tpn.jpg" alt="The Promised Neverland Fan Site Project">
                     <h3>TPN Fan Site</h3>
                     <p>A "passion project" fan site with a dark theme, CSS grid, and an interactive JavaScript "Before & After" image slider.</p>
-                    <a href="https://841a2552-1636-436b-9058-718163c4741d-00-3rf2ugn122w9d.sisko.replit.dev/" class="project-button" target="_blank">View Live Project</a>
+                    <a href="https://tpnfansite.netlify.app" class="project-button" target="_blank">View Live Project</a>                
                 </div>
 
             </div>
@@ -105,4 +105,4 @@
     </footer>
 
 </body>
-</html>
+</html> update prject limks
