--- a/index.html
+++ b/index.html
@@ -77,8 +77,7 @@
             </p>
 
             <div class="contact-form">
-                <form action="https://api.web3forms.com/submit" method="POST">
-                    <input type="hidden" name="access_key" value="684d47f8-c02c-49f0-a6c7-cc37c87d6666">
+                <form name="contact" data-netlify="true">
 
                     <div class="form-group">
                         <label for="name">Name</label>
@@ -105,4 +104,4 @@
     </footer>
 
 </body>
-</html> update prject limks
+</html> 
